--- a/index.html
+++ b/index.html
@@ -9,38 +9,34 @@
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
   />
-
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
 
   <main class="container">
-    <h1>Prompts & Materialien</h1>
-
-    <h2>
-      Medienpädagogische Fortbildung<br />
-      Schloss Siebeneichen · 7.–8. Januar 2026
-    </h2>
-
-    <p>
-      Auf dieser Seite findest du Prompts und Materialien für die gemeinsame
-      Arbeit während der Fortbildung.
-    </p>
+    <header>
+      <h1>Prompts & Materialien</h1>
+      <p class="lead">
+        Medienpädagogische Fortbildung – Schloss Siebeneichen, 7.–8. Januar 2026
+      </p>
+    </header>
 
     <section>
-      <h3>Prompts</h3>
+      <h2>Prompts</h2>
+      <p>Wähle einen Prompt aus, um ihn anzupassen oder zu kopieren:</p>
 
-      <div class="grid">
-        <a href="1.html" role="button">Prompt 1 · Ziel von Bildung</a>
-        <a href="2.html" role="button">Prompt 2</a>
-        <a href="3.html" role="button">Prompt 3</a>
-        <a href="4.html" role="button">Prompt 4</a>
-        <a href="materialien.html" role="button" class="secondary">
-          Weitere Materialien
-        </a>
+      <div class="grid" style="gap: 1rem; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));">
+        <a class="contrast" href="1.html">Prompt 1 · Ziel von Bildung</a>
+        <a class="contrast" href="2.html">Prompt 2</a>
+        <a class="contrast" href="3.html">Prompt 3</a>
+        <a class="contrast" href="4.html">Prompt 4</a>
+        <a href="materialien.html" class="secondary">Weitere Materialien</a>
       </div>
     </section>
 
+    <footer style="margin-top: 2rem;">
+      <p>2026 Schloss Siebeneichen – Medienpädagogische Fortbildung. Konzipiert und erstellt von Nele Hirsch (<a href="https://ebildungslabor.de">ebildungslabor</a>)</p>
+    </footer>
   </main>
 
 </body>
