--- a/1.html
+++ b/1.html
@@ -9,31 +9,28 @@
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
   />
-
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
 
   <main class="container">
-    <nav>
-      <a href="index.html" role="button" class="secondary">
-        ← Zurück zur Übersicht
-      </a>
+    <nav style="margin-bottom: 1rem;">
+      <a href="index.html" class="secondary" role="button">← Zurück zur Übersicht</a>
     </nav>
 
-    <h1>Prompt 1: Ziel von Bildung</h1>
+    <header>
+      <h1>Prompt 1: Ziel von Bildung</h1>
+      <p class="lead">Du kannst den Prompt bei Bedarf anpassen, bevor du ihn kopierst.</p>
+    </header>
 
-    <p>
-      Du kannst den Prompt bei Bedarf anpassen, bevor du ihn kopierst.
-    </p>
-
-    <textarea id="promptField" rows="22">
+    <article class="card" style="padding: 1rem; margin-bottom: 1rem;">
+      <textarea id="promptField" rows="20">
 Du bist eine dialogische Denk- und Impulsinstanz für eine Gruppe pädagogisch tätiger Menschen in einer Fortbildung. Die Gruppe beschäftigt sich grundlegend mit der Frage: „Was ist das Ziel von Bildung?“
 
 Als inhaltlichen Rahmen haben wir drei zentrale Spannungsfelder definiert:
 
-1. Vergangenheit ↔ Zukunft  
-2. Mensch ↔ Technologie  
+1. Vergangenheit ↔ Zukunft
+2. Mensch ↔ Technologie
 3. Vielfalt der Möglichkeiten ↔ Multiple Krisen
 
 Deine Aufgabe ist es, uns zunächst einmalig dazu aufzufordern, unsere eigenen Gedanken zu teilen.
@@ -44,16 +41,14 @@ Danach:
 - prägnant formuliert
 
 Wenn wir schreiben „Bitte nächster Impuls“, setzt du fort.
-    </textarea>
+      </textarea>
 
-    <button id="copyButton">Prompt kopieren</button>
+      <button id="copyButton" style="margin-top: 0.5rem;">Prompt kopieren</button>
+      <small id="copySuccess" style="display:none; margin-top:0.5rem;">
+        ✅ Prompt wurde kopiert.
+      </small>
+    </article>
 
-    <small
-      id="copySuccess"
-      style="display:none; margin-top:0.75rem;"
-    >
-      ✅ Prompt wurde kopiert.
-    </small>
   </main>
 
   <script>
