--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8" />
   <title>Medienpädagogische Fortbildung – Schloss Siebeneichen</title>
-
   <!-- PicoCSS -->
   <link
     rel="stylesheet"
@@ -12,32 +11,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
-
   <main class="container">
     <header>
       <h1>Prompts & Materialien</h1>
-      <p class="lead">
+      <p>
         Medienpädagogische Fortbildung – Schloss Siebeneichen, 7.–8. Januar 2026
       </p>
     </header>
-
+    
     <section>
       <h2>Prompts</h2>
       <p>Wähle einen Prompt aus, um ihn anzupassen oder zu kopieren:</p>
-
-      <div class="grid" style="gap: 1rem; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));">
-        <a class="contrast" href="1.html">Prompt 1 · Ziel von Bildung</a>
-        <a class="contrast" href="2.html">Prompt 2</a>
-        <a class="contrast" href="3.html">Prompt 3</a>
-        <a class="contrast" href="4.html">Prompt 4</a>
-        <a href="materialien.html" class="secondary">Weitere Materialien</a>
-      </div>
+      
+      <a href="1.html" role="button">Prompt 1 · Ziel von Bildung</a>
+      <a href="2.html" role="button" class="secondary">Prompt 2</a>
+      <a href="3.html" role="button" class="secondary">Prompt 3</a>
+      <a href="4.html" role="button" class="secondary">Prompt 4</a>
+      <a href="materialien.html" role="button" class="contrast">Weitere Materialien</a>
     </section>
-
-    <footer style="margin-top: 2rem;">
-      <p>2026 Schloss Siebeneichen – Medienpädagogische Fortbildung. Konzipiert und erstellt von Nele Hirsch (<a href="https://ebildungslabor.de">ebildungslabor</a>)</p>
-    </footer>
   </main>
-
+  
+  <footer class="container">
+    <small>
+      © 2026 Schloss Siebeneichen – Medienpädagogische Fortbildung.<br>
+      Konzipiert und erstellt von Nele Hirsch (<a href="https://ebildungslabor.de">ebildungslabor</a>)
+    </small>
+  </footer>
 </body>
 </html>
