--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8" />
   <title>Medienpädagogische Fortbildung – Schloss Siebeneichen</title>
-  <!-- PicoCSS -->
   <link
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
@@ -11,14 +10,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
+  <header class="container">
+    <h1>Prompts & Materialien</h1>
+    <p>Medienpädagogische Fortbildung – Schloss Siebeneichen, 7.–8. Januar 2026</p>
+  </header>
+
   <main class="container">
-    <header>
-      <h1>Prompts & Materialien</h1>
-      <p>
-        Medienpädagogische Fortbildung – Schloss Siebeneichen, 7.–8. Januar 2026
-      </p>
-    </header>
-    
     <section>
       <h2>Prompts</h2>
       <p>Wähle einen Prompt aus, um ihn anzupassen oder zu kopieren:</p>
@@ -30,10 +27,10 @@
       <a href="materialien.html" role="button" class="contrast">Weitere Materialien</a>
     </section>
   </main>
-  
+
   <footer class="container">
     <small>
-      © 2026 Schloss Siebeneichen – Medienpädagogische Fortbildung.<br>
+      2026 Schloss Siebeneichen – Medienpädagogische Fortbildung.<br>
       Konzipiert und erstellt von Nele Hirsch (<a href="https://ebildungslabor.de">ebildungslabor</a>)
     </small>
   </footer>
