Refactor HTML structure and remove unnecessary comments

--- a/1.html
+++ b/1.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8" />
   <title>Prompt 1 – Ziel von Bildung</title>
-  <!-- PicoCSS -->
   <link
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
@@ -11,18 +10,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
-  <main class="container">
+  <header class="container">
     <nav>
       <ul>
         <li><a href="index.html" class="secondary" role="button">← Zurück zur Übersicht</a></li>
       </ul>
     </nav>
-    
-    <header>
-      <h1>Prompt 1: Ziel von Bildung</h1>
-      <p>Du kannst den Prompt bei Bedarf anpassen, bevor du ihn kopierst.</p>
-    </header>
-    
+    <h1>Prompt 1: Ziel von Bildung</h1>
+    <p>Du kannst den Prompt bei Bedarf anpassen, bevor du ihn kopierst.</p>
+  </header>
+
+  <main class="container">
     <article>
       <textarea id="promptField" rows="20">Du bist eine dialogische Denk- und Impulsinstanz für eine Gruppe pädagogisch tätiger Menschen in einer Fortbildung. Die Gruppe beschäftigt sich grundlegend mit der Frage: „Was ist das Ziel von Bildung?"
 Als inhaltlichen Rahmen haben wir drei zentrale Spannungsfelder definiert:
@@ -43,7 +41,7 @@ Wenn wir schreiben „Bitte nächster Impuls", setzt du fort.</textarea>
       </small>
     </article>
   </main>
-  
+
   <footer class="container">
     <small>
       © 2026 Schloss Siebeneichen – Medienpädagogische Fortbildung.<br>
