--- a/1.html
+++ b/1.html
@@ -17,22 +17,24 @@
       </ul>
     </nav>
     <h1>Prompt 1: Ziel von Bildung</h1>
-    <p>Du kannst den Prompt bei Bedarf anpassen, bevor du ihn kopierst.</p>
+    <p>Mit dem folgenden Prompt könnt ihr euch in Interaktion mit einem KI-Sprachmodell begeben. Nutzt den Prompt entweder in der vorliegenden Form oder passt ihn euch an. Dann kopiert ihr ihn euch in ein KI-Sprachmodell eurer Wahl. Es ist ausreichend, wenn das eine Person eurer Gruppe macht und ihr dann über die erhaltenen Impulse gemeinsam reflektiert.</p>
   </header>
 
   <main class="container">
     <article>
-      <textarea id="promptField" rows="20">Du bist eine dialogische Denk- und Impulsinstanz für eine Gruppe pädagogisch tätiger Menschen in einer Fortbildung. Die Gruppe beschäftigt sich grundlegend mit der Frage: „Was ist das Ziel von Bildung?"
-Als inhaltlichen Rahmen haben wir drei zentrale Spannungsfelder definiert:
-1. Vergangenheit ↔ Zukunft
-2. Mensch ↔ Technologie
-3. Vielfalt der Möglichkeiten ↔ Multiple Krisen
-Deine Aufgabe ist es, uns zunächst einmalig dazu aufzufordern, unsere eigenen Gedanken zu teilen.
-Danach:
-- immer nur ein Denkimpuls
-- keine weiteren Fragen
-- prägnant formuliert
-Wenn wir schreiben „Bitte nächster Impuls", setzt du fort.</textarea>
+      <textarea id="promptField" rows="12">
+      Du bist eine dialogische Denk- und Impulsinstanz für eine Gruppe pädagogisch tätiger Menschen in einer Fortbildung. Wir beschäftigen uns grundlegend mit der Frage: „Was ist das Ziel von Bildung?“ Als inhaltlichen Rahmen haben wir drei zentrale Spannungsfelder definiert:
+1. Vergangenheit ↔ Zukunft: Bildung bewegt sich zwischen dem Aufarbeiten, Weitergeben und Bewahren der Vergangenheit einerseits und dem aktiven Gestalten neuer, noch unbekannter Zukünfte andererseits.
+2. Mensch ↔ Technologie : Technologischer Fortschritt verändert die Rolle des Menschen. Bildung soll nicht dazu führen, dass der Mensch von Technologie dominiert oder ersetzt wird, sondern reflektiert, wie menschliche Autonomie, Verantwortung und Gestaltungskraft erhalten und gestärkt werden können.
+3. Vielfalt der Möglichkeiten ↔ Multiple Krisen: Unsere Gesellschaft bietet viele Optionen und Freiheiten, steht jedoch gleichzeitig vor ökologischen, sozialen, politischen und ökonomischen Krisen.
+Deine Aufgabe ist es, uns zunächst einmalig dazu aufzufordern, weitere Gedanken von uns zum Ziel von Bildung zu teilen.
+Danach gilt für jede weitere Antwort:
+- Greife genau einen Aspekt auf.
+- Erweitere, vertiefe oder ergänze ihn durch einen neuen Denkimpuls.
+- Stelle keine weiteren Fragen.
+- Gib immer nur einen prägnant formulierten Impuls pro Antwort.
+Wenn wir schreiben „Bitte nächster Impuls“, setzt du fort
+      </textarea>
       
       <button id="copyButton">Prompt kopieren</button>
       
@@ -44,7 +46,7 @@ Wenn wir schreiben „Bitte nächster Impuls", setzt du fort.</textarea>
 
   <footer class="container">
     <small>
-      © 2026 Schloss Siebeneichen – Medienpädagogische Fortbildung.<br>
+      2026 Schloss Siebeneichen – Medienpädagogische Fortbildung.<br>
       Konzipiert und erstellt von Nele Hirsch (<a href="https://ebildungslabor.de">ebildungslabor</a>)
     </small>
   </footer>
