--- a/1.html
+++ b/1.html
@@ -46,8 +46,7 @@ Wenn wir schreiben „Bitte nächster Impuls“, setzt du fort
 
   <footer class="container">
     <small>
-      2026 Schloss Siebeneichen – Medienpädagogische Fortbildung.<br>
-      Konzipiert und erstellt von Nele Hirsch (<a href="https://ebildungslabor.de">ebildungslabor</a>)
+      Konzipiert und erstellt von Nele Hirsch (<a href="https://ebildungslabor.de">eBildungslabor</a>)
     </small>
   </footer>
   
