--- a/index.html
+++ b/index.html
@@ -11,26 +11,28 @@
 </head>
 <body>
   <header class="container">
-    <h1>Prompts & Materialien</h1>
-    <p>Medienpädagogische Fortbildung – Schloss Siebeneichen, 7.–8. Januar 2026</p>
+    <h1>Begleitende Materialien zur medienpädagogischen Fortbildung</h1>
+    <p>Schloss Siebeneichen, 7.–8. Januar 2026</p>
   </header>
 
   <main class="container">
     <section>
       <h2>Prompts</h2>
-      <p>Wähle einen Prompt aus, um ihn anzupassen oder zu kopieren:</p>
-      
-      <a href="1.html" role="button">Prompt 1 · Ziel von Bildung</a>
-      <a href="2.html" role="button" class="secondary">Prompt 2</a>
-      <a href="3.html" role="button" class="secondary">Prompt 3</a>
-      <a href="4.html" role="button" class="secondary">Prompt 4</a>
-      <a href="materialien.html" role="button" class="contrast">Weitere Materialien</a>
+      <p>Die folgenden Prompts werden wir im Verlauf der Fortbildung nutzen:</p>
+      <p>
+      <a href="1.html" role="button">Prompt 1: Reflexion zum Ziel von Bildung</a></p>
+ 
+      <h2>Weitere Materialien</h2>
+
+       <a href="meta.html" role="button">Verwendete Methoden und Ansätze (Meta-Refexion)</a></p>
+ <p>Eine ausführliche Darstellung zur verwendeten Konzeption und Durchführung findest du im Anschluss an die Fortbildung im <a href="https://ebildungslabor.de">ebildungslabor</a> </p>     
+ 
     </section>
   </main>
 
   <footer class="container">
     <small>
-      2026 Schloss Siebeneichen – Medienpädagogische Fortbildung.<br>
+Die Inhalte auf dieser Website stehen unter der <a href="https://creativecommons.org/publicdomain/zero/1.0/deed.de">Lizenz CC0 1.0</a><br>
       Konzipiert und erstellt von Nele Hirsch (<a href="https://ebildungslabor.de">ebildungslabor</a>)
     </small>
   </footer>
