Remove footer with author details
Removed footer section containing author information.

--- a/1.html
+++ b/1.html
@@ -43,13 +43,11 @@ Wenn wir schreiben „Bitte nächster Impuls“, setzt du fort
         ✅ Prompt wurde kopiert.
       </small>
     </article>
+
+    <p>  <li><a href="index.html" class="secondary" role="button">← Zurück zur Übersicht</a></li></p>
   </main>
 
-  <footer class="container">
-    <small>
-      Konzipiert und erstellt von Nele Hirsch (<a href="https://ebildungslabor.de">eBildungslabor</a>)
-    </small>
-  </footer>
+
   
   <script>
     const copyButton = document.getElementById("copyButton");
