--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
   <main class="container">
     <section>
       <h2>Prompts</h2>
-      <p>Die folgenden Prompts werden wir im Verlauf der Fortbildung nutzen:</p>
-      <p>
-      <a href="1.html" role="button">Prompt 1: Reflexion zum Ziel von Bildung</a></p>
- 
+      <p>Die folgenden Prompts können wir im Verlauf der Fortbildung nutzen:</p>
+      <p><a href="1.html" role="button">Prompt 1: Reflexion zum Ziel von Bildung</a></p>
+          <p><a href="2.html" role="button">Prompt 2: Spannungsverhältnisse in der Lerngestaltung</a></p>
+         <p><a href="3.html" role="button">Prompt 3: Ausarbeitung der Kategorien der Inner Development Goals</a></p>
+         <p><a href="4.html" role="button">Prompt 4: Brainstorming-Partner zur Ideen-Entwicklung</a></p>
       <h2>Weitere Materialien</h2>
 
-       <a href="meta.html" role="button">Verwendete Methoden und Ansätze (Meta-Refexion)</a></p>
+             <p><a href="gruppenarbeit.html" role="button">Anleitung zur Gruppenarbeit mit den Symbolen</a></p>
+       <p><a href="meta.html" role="button">Verwendete Methoden und Ansätze (Meta-Refexion)</a></p>
  <p>Eine ausführliche Darstellung zur verwendeten Konzeption und Durchführung findest du im Anschluss an die Fortbildung im <a href="https://ebildungslabor.de">ebildungslabor</a> </p>     
  
     </section>
