Refine collaboration section and add navigation link

--- a/gruppenarbeit.html
+++ b/gruppenarbeit.html
@@ -52,7 +52,7 @@
 
       <details>
         <summary><strong>💬 Sprechblasen: Kategorie ZUSAMMENARBEIT</strong></summary>
-        <p>In der Kategorie ZUSAMMENARBEIT liegt der Fokus auf sozialen Fähigkeiten. Es geht darum, dass Lernende konstruktiv mit anderen zusammenarbeiten können, damit sie gemeinsam Lösungen entwickeln und Veränderungen gestalten. Digitale Tools eröffnen völlig neue Möglichkeiten der Kollaboration: gemeinsam an Dokumenten arbeiten, Ideen in Echtzeit teilen, kreative Projekte über Distanzen hinweg entwickeln. Diese Potenziale zu nutzen erfordert soziale Fähigkeiten wie konstruktive Kommunikation und die Bereitschaft, verschiedene Perspektiven einzubeziehen. Co-Creation (gemeinsames Erschaffen von Neuem) bedeutet, dass unterschiedliche Menschen mit ihren verschiedenen Perspektiven und Stärken zusammenkommen und etwas gestalten, das alleine nicht möglich wäre. Dazu gehören zum Beispiel diese inneren Fähigkeiten und Qualitäten: Kommunikationsfähigkeit, Co-Creation (gemeinsames Erschaffen), inklusive Haltung (alle einbeziehen), Vertrauen, Mobilisierungsfähigkeit (andere aktivieren und einbinden).</p>
+        <p>In der Kategorie ZUSAMMENARBEIT liegt der Fokus auf sozialen Fähigkeiten. Es geht darum, dass Lernende konstruktiv mit anderen zusammenarbeiten können, damit sie gemeinsam Lösungen entwickeln und Veränderungen gestalten. Digitale Tools eröffnen völlig neue Möglichkeiten der Kollaboration: gemeinsam an Dokumenten arbeiten, Ideen in Echtzeit teilen, kreative Projekte über Distanzen hinweg entwickeln. Diese Potenziale zu nutzen erfordert soziale Fähigkeiten wie konstruktive Kommunikation und die Bereitschaft, verschiedene Perspektiven einzubeziehen. Dazu gehören zum Beispiel diese inneren Fähigkeiten und Qualitäten: Kommunikationsfähigkeit, Co-Creation (gemeinsames Erschaffen von Neuem, was alleine nicht möglich wäre), inklusive Haltung (alle einbeziehen), Vertrauen, Mobilisierungsfähigkeit (andere aktivieren und einbinden).</p>
       </details>
 
       <details>
@@ -60,6 +60,7 @@
         <p>In der Kategorie HANDELN liegt der Fokus auf die Fähigkeit, Veränderung zu ermöglichen. Es geht darum, dass Lernende vom Denken ins Tun kommen und wirksam werden, damit sie aktiv zur Gestaltung einer zukunftsfähigen Welt beitragen. Digitale Technologien sind Werkzeuge, mit denen wir unsere Lebenswelt aktiv gestalten können – sei es durch kreative Projekte, durch Teilen von Wissen oder durch Initiativen für Veränderung. Wenn Lernende diese Gestaltungsmöglichkeiten erkunden und erleben, dass sie selbst etwas bewirken können, stärkt das ihre Selbstwirksamkeit und ihren Gestaltungswillen. Dazu gehören zum Beispiel diese inneren Fähigkeiten und Qualitäten: Mut, Kreativität, Optimismus, Ausdauer.</p>
       </details>
     </section>
+    <p> <a href="index.html" class="secondary" role="button">← Zurück zur Übersicht</a></p>
   </main>
 </body>
 </html>
