Remove navigation and simplify back link

--- a/1.html
+++ b/1.html
@@ -11,11 +11,7 @@
 </head>
 <body>
   <header class="container">
-    <nav>
-      <ul>
-        <li><a href="index.html" class="secondary" role="button">← Zurück zur Übersicht</a></li>
-      </ul>
-    </nav>
+   
     <h1>Prompt 1: Ziel von Bildung</h1>
 
   </header>
@@ -44,7 +40,7 @@ Wenn wir schreiben „Bitte nächster Impuls“, setzt du fort
       </small>
     </article>
 
-    <p>  <li><a href="index.html" class="secondary" role="button">← Zurück zur Übersicht</a></li></p>
+    <p> <a href="index.html" class="secondary" role="button">← Zurück zur Übersicht</a></p>
   </main>
 
 
