Update title and navigation in 2.html

--- a/2.html
+++ b/2.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8" />
-  <title>Prompt 1 – Ziel von Bildung</title>
+  <title>Prompt 2 – Spannungsverhältnisse in der Lerngestaltung</title>
   <link
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
@@ -11,11 +11,7 @@
 </head>
 <body>
   <header class="container">
-    <nav>
-      <ul>
-        <li><a href="index.html" class="secondary" role="button">← Zurück zur Übersicht</a></li>
-      </ul>
-    </nav>
+   
     <h1>Prompt 2: Spannungsfelder in der Lerngestaltung</h1>
 
   </header>
@@ -35,7 +31,7 @@
       </small>
     </article>
 
-    <p>  <li><a href="index.html" class="secondary" role="button">← Zurück zur Übersicht</a></li></p>
+    <p> <a href="index.html" class="secondary" role="button">← Zurück zur Übersicht</a></p>
   </main>
 
 
