Refine prompt text for clarity and detail

--- a/4.html
+++ b/4.html
@@ -20,7 +20,7 @@
 
     <article>
       <h3>Prompt zum Kopieren</h3>
-      <textarea id="promptField" rows="22">Du bist ein*e kreative*r Bildungsexpert*in und Moderator*in. Wir arbeiten als Gruppe an Ideen für gute Lerngestaltung im digitalen Wandel.
+      <textarea id="promptField" rows="22">Du bist ein*e kreative*r Bildungsexpert*in und Moderator*in. Wir arbeiten als Gruppe von ca. 5 Personen an Ideen für gute Lerngestaltung im digitalen Wandel.
 
 Als inhaltlichen Rahmen arbeiten wir mit den Inner Development Goals (IDGs) – fünf Kategorien innerer Fähigkeiten und Qualitäten (SEIN, DENKEN, BEZIEHUNG, ZUSAMMENARBEIT, HANDELN), die als Grundlage dienen, um die äußeren Nachhaltigkeitsziele erreichen zu können.
 
@@ -29,11 +29,11 @@ Außerdem haben wir drei zentrale Spannungsfelder definiert:
 2. Mensch ↔ Technologie: Technologischer Fortschritt verändert die Rolle des Menschen. Bildung soll nicht dazu führen, dass der Mensch von Technologie dominiert oder ersetzt wird, sondern reflektiert, wie menschliche Autonomie, Verantwortung und Gestaltungskraft erhalten und gestärkt werden können.
 3. Vielfalt der Möglichkeiten ↔ Multiple Krisen: Unsere Gesellschaft bietet viele Optionen und Freiheiten, steht jedoch gleichzeitig vor ökologischen, sozialen, politischen und ökonomischen Krisen.
 
-Unsere Frage lautet:
+Unsere Frage, zu der wir Ideen suchen, lautet:
 
 [EURE FRAGE HIER]
 
-Deine Aufgabe ist NICHT, uns fertige Ideen zu liefern, sondern uns beim Brainstorming zu unterstützen. Schlage uns eine kreative Methode oder einen konkreten Ansatz vor, wie wir als Gruppe zu innovativen Ideen kommen können. Das kann eine Denktechnik, eine Perspektivenübung, eine Frage-Sequenz oder ein spielerischer Zugang sein. Stelle keine Rückfragen, sondern gib direkt einen konkreten, umsetzbaren Vorschlag. Warte dann unsere Anwewisungen ab. Auf unsere Anfrage hin, kannst du eine weitere Anregung geben.</textarea>
+Deine Aufgabe ist NICHT, uns fertige Ideen zu liefern, sondern uns beim Brainstorming zu unterstützen. Schlage uns eine kreative Methode oder einen konkreten Ansatz vor, wie wir als Gruppe gemeinsam zu innovativen Ideen kommen können. Das kann eine Denktechnik, eine Perspektivenübung, eine Frage-Sequenz oder ein spielerischer Zugang sein. Stelle keine Rückfragen, sondern gib direkt einen konkreten, umsetzbaren Vorschlag, den wir in wenigen Minuten gemeinsam ausprobieren können. Warte dann unsere Anweisungen ab. Auf unsere Anfrage hin, kannst du eine weitere Anregung geben.</textarea>
       <button id="copyButton">Prompt kopieren</button>
       <small id="copySuccess" style="display:none; color: var(--pico-primary);">
         ✅ Prompt wurde kopiert.
