Update links and text in index.html

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
          <p><a href="4.html" role="button">Prompt 4: Brainstorming-Partner zur Ideen-Entwicklung</a></p>
       <h2>Weitere Materialien</h2>
 
-             <p><a href="gruppenarbeit.html" role="button">Anleitung zur Gruppenarbeit mit den Symbolen</a></p>
-       <p><a href="meta.html" role="button">Verwendete Methoden und Ansätze (Meta-Refexion)</a></p>
- <p>Eine ausführliche Darstellung zur verwendeten Konzeption und Durchführung findest du im Anschluss an die Fortbildung im <a href="https://ebildungslabor.de">ebildungslabor</a> </p>     
+             <p><a href="gruppenarbeit.html" role="button">Anleitung zur Gruppenarbeit mit den Symbolen der Inner Development Goals</a></p>
+       <p><a href="meta.html" role="button">Verwendete Methoden und Ansätze (Meta-Reflexion)</a></p>
+ <p>Eine ausführliche Darstellung zur verwendeten Konzeption und Durchführung findest du im Anschluss an die Fortbildung im <a href="https://ebildungslabor.de">eBildungslabor</a> </p>     
  
     </section>
   </main>
