--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
   <main class="container">
     <section>
-      <h2>Prompts</h2>
-      <p>Die folgenden Prompts können wir im Verlauf der Fortbildung nutzen:</p>
+      <h2>Prompts zur Interaktion mit KI-Sprachmodellen</h2>
+      <p>Die folgenden Prompts können wir im Verlauf der Fortbildung anpassen und nutzen:</p>
       <p><a href="1.html" role="button">Prompt 1: Reflexion zum Ziel von Bildung</a></p>
           <p><a href="2.html" role="button">Prompt 2: Spannungsverhältnisse in der Lerngestaltung</a></p>
          <p><a href="3.html" role="button">Prompt 3: Ausarbeitung der Kategorien der Inner Development Goals</a></p>
@@ -35,7 +35,7 @@
   <footer class="container">
     <small>
 Die Inhalte auf dieser Website stehen unter der <a href="https://creativecommons.org/publicdomain/zero/1.0/deed.de">Lizenz CC0 1.0</a><br>
-      Konzipiert und erstellt von Nele Hirsch (<a href="https://ebildungslabor.de">ebildungslabor</a>)
+      Konzipiert und erstellt von Nele Hirsch (<a href="https://ebildungslabor.de">eBildungslabor</a>)
     </small>
   </footer>
 </body>
