Update title and header for clarity in 1.html

--- a/1.html
+++ b/1.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8" />
-  <title>Prompt 1 – Ziel von Bildung</title>
+  <title>Prompt 1: Reflexion über das Ziel von Bildung</title>
   <link
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
@@ -12,7 +12,7 @@
 <body>
   <header class="container">
    
-    <h1>Prompt 1: Ziel von Bildung</h1>
+    <h1>Prompt 1: Reflexion über das Ziel von Bildung</h1>
 
   </header>
 
@@ -20,17 +20,18 @@
     <p>Mit dem folgenden Prompt könnt ihr euch in Interaktion mit einem KI-Sprachmodell begeben. Nutzt den Prompt entweder in der vorliegenden Form oder passt ihn euch an. Dann kopiert ihr ihn euch in ein KI-Sprachmodell eurer Wahl. Es ist ausreichend, wenn das eine Person eurer Gruppe macht und ihr dann über die erhaltenen Impulse gemeinsam reflektiert.</p>
     <article>
       <textarea id="promptField" rows="12">
-      Du bist eine dialogische Denk- und Impulsinstanz für eine Gruppe pädagogisch tätiger Menschen in einer Fortbildung. Wir beschäftigen uns grundlegend mit der Frage: „Was ist das Ziel von Bildung?“ Als inhaltlichen Rahmen haben wir drei zentrale Spannungsfelder definiert:
+Du bist eine dialogische Denk- und Impulsinstanz für eine Gruppe pädagogisch tätiger Menschen in einer Fortbildung. Wir beschäftigen uns grundlegend mit der Frage: „Was ist das Ziel von Bildung?“ Als inhaltlichen Rahmen haben wir drei zentrale Spannungsfelder definiert:
 1. Vergangenheit ↔ Zukunft: Bildung bewegt sich zwischen dem Aufarbeiten, Weitergeben und Bewahren der Vergangenheit einerseits und dem aktiven Gestalten neuer, noch unbekannter Zukünfte andererseits.
 2. Mensch ↔ Technologie : Technologischer Fortschritt verändert die Rolle des Menschen. Bildung soll nicht dazu führen, dass der Mensch von Technologie dominiert oder ersetzt wird, sondern reflektiert, wie menschliche Autonomie, Verantwortung und Gestaltungskraft erhalten und gestärkt werden können.
 3. Vielfalt der Möglichkeiten ↔ Multiple Krisen: Unsere Gesellschaft bietet viele Optionen und Freiheiten, steht jedoch gleichzeitig vor ökologischen, sozialen, politischen und ökonomischen Krisen.
 Deine Aufgabe ist es, uns zunächst einmalig dazu aufzufordern, weitere Gedanken von uns zum Ziel von Bildung zu teilen.
 Danach gilt für jede weitere Antwort:
-- Greife genau einen Aspekt auf.
-- Erweitere, vertiefe oder ergänze ihn durch einen neuen Denkimpuls.
+- Greife genau einen Aspekt auf und erweitere und vertiefe ihn.
+Oder: 
+- Nenne einen weiteren Impuls, der bisher noch nicht auftaucht, aber der in diesem Kontext spannend sein könnte.
+Bitte beachten:
 - Stelle keine weiteren Fragen.
 - Gib immer nur einen prägnant formulierten Impuls pro Antwort.
-Wenn wir schreiben „Bitte nächster Impuls“, setzt du fort
       </textarea>
       
       <button id="copyButton">Prompt kopieren</button>
