--- a/2.html
+++ b/2.html
@@ -17,11 +17,10 @@
   </header>
 
   <main class="container">
-    <p>Ihr habt alle ein Spannungsfeld in der Lerngestaltung erhalten, das ihr in den folgenden Prompt eintragen und euch diesen dann in ein Sprachmodell Eurer Wahl eingeben könnt. Natürlich könnt ihr vorab den Prompt auch noich weiter anpassen. Chattet dann zunächst individuell mit dem Sprachmodell darüber und stellt eure wichtigsten Einsichten anschließend in der Gruppe vor.</p>
+    <p>Ihr habt alle ein Spannungsfeld in der Lerngestaltung erhalten, das ihr in den folgenden Prompt eintragen und diesen dann in ein Sprachmodell Eurer Wahl eingeben könnt. Natürlich könnt ihr vorab den Prompt auch noch weiter anpassen. Chattet dann zunächst individuell mit dem Sprachmodell darüber und stellt eure wichtigsten Einsichten anschließend in der Gruppe vor.</p>
     <article>
       <textarea id="promptField" rows="12">
-      Du bist eine dialogische Denk- und Impulsinstanz für mich. Ich bin eine pädagogisch tätige Person, die sich in Vorbereitung einer Gruppendiskussion Gedanken über gute Lernestaltung in einer zunehmende digital geprägten, sich schnell wandelnden und krisenhaften Welt macht. Ich habe hierzu das folgende Spannungsfeld in der Lerngestaltung zugeteilt bekommen: [Spannungsfeld einfügen]. Bitte starte damit, dass du mir anhand eines Beispiels erklärst, was mit diesem Spannungsfeld gemeint ist. Ich werde dann weiter nachfragen. Bitte gib mir immer pro Antwort nur einen Aspekt an. Schreibe prägnant und verständloch. Stelle keine weiteren Fragen und mache mir keine Angebote, was du sonst noch erledigen könntest, sondern warte darauf, was ich von dir erfrage.
-
+      Du bist eine dialogische Denk- und Impulsinstanz für mich. Ich bin eine pädagogisch tätige Person, die sich in Vorbereitung einer Gruppendiskussion Gedanken über gute Lerngestaltung in einer zunehmende digital geprägten, sich schnell wandelnden und krisenhaften Welt macht. Ich habe hierzu das folgende Spannungsfeld in der Lerngestaltung zugeteilt bekommen: [Spannungsfeld einfügen]. Bitte starte damit, dass du mir anhand eines Beispiels erklärst, was mit diesem Spannungsfeld gemeint ist. Ich werde dann weiter nachfragen. Bitte gib mir immer pro Antwort nur einen Aspekt an. Schreibe prägnant und verständlich. Stelle keine weiteren Fragen und mache mir keine Angebote, was du sonst noch erledigen könntest, sondern warte darauf, was ich von dir erfrage.
       </textarea>
       
       <button id="copyButton">Prompt kopieren</button>
