Revise heading and prompt instructions in 3.html
Updated the heading and modified the prompt description for clarity.

--- a/3.html
+++ b/3.html
@@ -16,11 +16,11 @@
         <li><a href="index.html" class="secondary" role="button">← Zurück zur Übersicht</a></li>
       </ul>
     </nav>
-    <h1>Prompt 3: Reflexion zu den einzelnen Kategorien der IDGs</h1>
+    <h1>Prompt 3: Ausarbeitung zu den einzelnen Kategorien der IDGs</h1>
   </header>
   
   <main class="container">
-    <p>Untenstehend findet ihr vorbereitete Prompts für jede Kategorie der Inner Development Goals. Wählt euch eure Kategorie aus und passt den Prompt an: <strong>Löscht die Option, die ihr nicht braucht</strong> – entweder nutzt ihr den Kopfstand (absurde Anti-Beispiele sammeln) oder ihr dreht ihn schon um (konkrete Ideen entwickeln). Kopiert den angepassten Prompt dann in ein Sprachmodell eurer Wahl. Es ist ausreichend, wenn eine Person aus eurer Gruppe das macht und ihr den Output dann gemeinsam reflektiert.</p>
+    <p>Untenstehend findet ihr vorbereitete Prompts für jede Kategorie der Inner Development Goals. Wählt euch eure Kategorie aus und passt den Prompt an: <strong>Löscht die Option, die ihr nicht braucht</strong> – entweder nutzt ihr den Kopfstand (absurde Anti-Beispiele sammeln) oder ihr dreht ihn schon um (konkrete Ideen entwickeln) oder ihr nutzt beodes nacheinander. Kopiert den angepassten Prompt dann in ein Sprachmodell eurer Wahl. Es ist ausreichend, wenn eine Person aus eurer Gruppe das macht und ihr den Output dann gemeinsam reflektiert.</p>
 
     <!-- Kategorie SEIN -->
     <article>
