--- a/4.html
+++ b/4.html
@@ -29,11 +29,11 @@ Außerdem haben wir drei zentrale Spannungsfelder definiert:
 2. Mensch ↔ Technologie: Technologischer Fortschritt verändert die Rolle des Menschen. Bildung soll nicht dazu führen, dass der Mensch von Technologie dominiert oder ersetzt wird, sondern reflektiert, wie menschliche Autonomie, Verantwortung und Gestaltungskraft erhalten und gestärkt werden können.
 3. Vielfalt der Möglichkeiten ↔ Multiple Krisen: Unsere Gesellschaft bietet viele Optionen und Freiheiten, steht jedoch gleichzeitig vor ökologischen, sozialen, politischen und ökonomischen Krisen.
 
-Unsere Frage, zu der wir Ideen suchen, lautet:
+Unsere Frage, zu der wir nun konkrete Ideen suchen, lautet:
 
 [EURE FRAGE HIER]
 
-Deine Aufgabe ist NICHT, uns fertige Ideen zu liefern, sondern uns beim Brainstorming zu unterstützen. Schlage uns eine kreative Methode oder einen konkreten Ansatz vor, wie wir als Gruppe gemeinsam zu innovativen Ideen kommen können. Das kann eine Denktechnik, eine Perspektivenübung, eine Frage-Sequenz oder ein spielerischer Zugang sein. Stelle keine Rückfragen, sondern gib direkt einen konkreten, umsetzbaren Vorschlag, den wir in wenigen Minuten gemeinsam ausprobieren können. Warte dann unsere Anweisungen ab. Auf unsere Anfrage hin, kannst du eine weitere Anregung geben.</textarea>
+Deine Aufgabe ist NICHT, uns fertige Ideen zu liefern, sondern uns beim Brainstorming zu unterstützen. Schlage uns eine kreative Methode oder einen konkreten Ansatz vor, wie wir als Gruppe gemeinsam zu innovativen Ideen kommen können. Das kann eine Denktechnik, eine Perspektivenübung, eine Frage-Sequenz oder ein spielerischer Zugang sein. Stelle keine Rückfragen, sondern gib direkt einen konkreten, umsetzbaren Vorschlag, den wir in wenigen Minuten gemeinsam durchführen können. Warte dann unsere Anweisungen ab. Auf unsere Anfrage hin, kannst du eine weitere Anregung zur Unterstützung unseres Brainstormings geben.</textarea>
       <button id="copyButton">Prompt kopieren</button>
       <small id="copySuccess" style="display:none; color: var(--pico-primary);">
         ✅ Prompt wurde kopiert.
