Refine instructions and category summaries in HTML

--- a/gruppenarbeit.html
+++ b/gruppenarbeit.html
@@ -24,39 +24,39 @@
       <h2>Arbeitsauftrag</h2>
       <ol>
         <li><strong>Gruppe bilden:</strong> Findet euch zu dritt oder viert zusammen – alle mit derselben Kategorie.</li>
-        <li><strong>Kategorie verstehen:</strong> Lest gemeinsam die unten stehende Beschreibung zu eurer Kategorie und klärt offene Fragen.</li>
+        <li><strong>Kategorie verstehen:</strong> Lest gemeinsam die unten stehende Beschreibung zu eurer Kategorie und klärt untereinander offene Fragen.</li>
         <li><strong>Kopfstand-Methode:</strong> Überlegt: Was wäre das Dümmste, was wir in der Bildung tun könnten, damit diese Kategorie garantiert NICHT erreicht wird? Übertreibt ruhig und übertrumpft euch gegenseitig mit immer absurderen Anti-Beispielen.</li>
         <li><strong>Umdrehen:</strong> Dreht die Perspektive um – was wäre stattdessen sinnvoll und wichtig?</li>
         <li><strong>Festhalten:</strong> Notiert euch die wichtigsten Aspekte für eure spätere Vorstellung in der Stammgruppe. Reflektiert dabei insbesondere auch, welche Rolle Technologie im Kontext eurer Kategorie spielt oder spielen könnte.</li>
       </ol>
-      <p><strong>Optional:</strong> Nutzt ein KI-Sprachmodell zur Unterstützung. <a href="3.html">Hier findet ihr dazu vorbereitete Prompts.</a></p>
+      <p><strong>Optional:</strong> Nutzt ein KI-Sprachmodell zur Unterstützung beim Kopfstand und Umkehr des Kopfstands. <a href="3.html">Hier findet ihr dazu vorbereitete Prompts.</a></p>
     </section>
 
     <section>
       <h2>Kategorie-Beschreibungen</h2>
       
       <details>
-        <summary><strong>😊 Smiley: Kategorie SEIN</strong></summary>
+        <summary><strong>😊 Kategorie SEIN</strong></summary>
         <p>In der Kategorie SEIN liegt der Fokus auf der Beziehung zu sich selbst. Es geht darum, dass Lernende ein stabiles inneres Fundament entwickeln, damit sie auch in komplexen und herausfordernden Situationen handlungsfähig bleiben. Wer sich selbst gut kennt und versteht, was ihm wirklich wichtig ist, kann authentischer agieren und bleibt orientiert. In einer digital geprägten Lebenswelt mit vielfältigen Möglichkeiten der Selbstdarstellung und Vernetzung hilft diese innere Klarheit, selbstbestimmt zu entscheiden: Welche digitalen Räume möchte ich nutzen? Wie will ich mich dort zeigen? Was ist mir wirklich wichtig? Dazu gehören zum Beispiel diese inneren Fähigkeiten und Qualitäten: Selbstwahrnehmung, Selbstreflexion, innerer Kompass (eigene Werte kennen), Integrität, Offenheit und Lernbereitschaft, Präsenz.</p>
       </details>
 
       <details>
-        <summary><strong>❓ Fragezeichen: Kategorie DENKEN</strong></summary>
+        <summary><strong>❓ Kategorie DENKEN</strong></summary>
         <p>In der Kategorie DENKEN liegt der Fokus auf kognitiven Fähigkeiten. Es geht darum, dass Lernende komplexe Zusammenhänge verstehen und mit Unsicherheit umgehen können, damit sie informierte und reflektierte Entscheidungen treffen. Digitale Technologien eröffnen uns Zugang zu unendlich vielen Perspektiven, Wissensquellen und Zusammenhängen – das ist eine riesige Chance zum Erkunden und Lernen. Um diese Möglichkeiten gewinnbringend zu nutzen, braucht es die Fähigkeit, verschiedene Standpunkte einzunehmen, Informationen kritisch einzuordnen und eigene Schlüsse zu ziehen. Dazu gehören zum Beispiel diese inneren Fähigkeiten und Qualitäten: kritisches Denken, Perspektivenvielfalt, Sensemaking (aus Informationen Bedeutung und Sinn erschließen), Bewusstsein für Komplexität, langfristiges Denken.</p>
       </details>
 
       <details>
-        <summary><strong>❤️ Herz: Kategorie BEZIEHUNG</strong></summary>
+        <summary><strong>❤️ Kategorie BEZIEHUNG</strong></summary>
         <p>In der Kategorie BEZIEHUNG liegt der Fokus auf Fürsorge und Verbundenheit mit anderen. Es geht darum, dass Lernende echte Beziehungen aufbauen und Empathie entwickeln, damit sie sich als Teil einer größeren Gemeinschaft verstehen. Lernen ist immer auch ein sozialer Prozess – wir lernen mit und von anderen. Digitale Räume erweitern unsere Möglichkeiten, mit Menschen überall auf der Welt in Kontakt zu treten, voneinander zu lernen und gemeinsam Projekte zu entwickeln. Gleichzeitig braucht es Empathie und Wertschätzung, um diese Verbindungen – ob analog oder digital – lebendig und bedeutsam zu gestalten. Wenn Schüler*innen spüren, dass sie Teil einer größeren Gemeinschaft sind, entwickeln sie Verantwortungsgefühl und Engagement. Dazu gehören zum Beispiel diese inneren Fähigkeiten und Qualitäten: Wertschätzung, Verbundenheit, Demut, Empathie, Mitgefühl.</p>
       </details>
 
       <details>
-        <summary><strong>💬 Sprechblasen: Kategorie ZUSAMMENARBEIT</strong></summary>
+        <summary><strong>💬 Kategorie ZUSAMMENARBEIT</strong></summary>
         <p>In der Kategorie ZUSAMMENARBEIT liegt der Fokus auf sozialen Fähigkeiten. Es geht darum, dass Lernende konstruktiv mit anderen zusammenarbeiten können, damit sie gemeinsam Lösungen entwickeln und Veränderungen gestalten. Digitale Tools eröffnen völlig neue Möglichkeiten der Kollaboration: gemeinsam an Dokumenten arbeiten, Ideen in Echtzeit teilen, kreative Projekte über Distanzen hinweg entwickeln. Diese Potenziale zu nutzen erfordert soziale Fähigkeiten wie konstruktive Kommunikation und die Bereitschaft, verschiedene Perspektiven einzubeziehen. Dazu gehören zum Beispiel diese inneren Fähigkeiten und Qualitäten: Kommunikationsfähigkeit, Co-Creation (gemeinsames Erschaffen von Neuem, was alleine nicht möglich wäre), inklusive Haltung (alle einbeziehen), Vertrauen, Mobilisierungsfähigkeit (andere aktivieren und einbinden).</p>
       </details>
 
       <details>
-        <summary><strong>➡️ Pfeil: Kategorie HANDELN</strong></summary>
+        <summary><strong>➡️ Kategorie HANDELN</strong></summary>
         <p>In der Kategorie HANDELN liegt der Fokus auf die Fähigkeit, Veränderung zu ermöglichen. Es geht darum, dass Lernende vom Denken ins Tun kommen und wirksam werden, damit sie aktiv zur Gestaltung einer zukunftsfähigen Welt beitragen. Digitale Technologien sind Werkzeuge, mit denen wir unsere Lebenswelt aktiv gestalten können – sei es durch kreative Projekte, durch Teilen von Wissen oder durch Initiativen für Veränderung. Wenn Lernende diese Gestaltungsmöglichkeiten erkunden und erleben, dass sie selbst etwas bewirken können, stärkt das ihre Selbstwirksamkeit und ihren Gestaltungswillen. Dazu gehören zum Beispiel diese inneren Fähigkeiten und Qualitäten: Mut, Kreativität, Optimismus, Ausdauer.</p>
       </details>
     </section>
