Update section headers and add documentation link

--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
   </header>
 
   <main class="container">
-    <section>
-      <h2>Prompts zur Interaktion mit KI-Sprachmodellen</h2>
+    <h2>Dokumentation der Barcamp-Sessions</h2> 
+
+          <p><a href="barcamp.html" role="button">Alle Doku-Links im Überblick</a></p>
+
+    
+    <h2>Prompts zur Interaktion mit KI-Sprachmodellen</h2>
       <p>Die folgenden Prompts können wir im Verlauf der Fortbildung anpassen und nutzen:</p>
       <p><a href="1.html" role="button">Prompt 1: Reflexion zum Ziel von Bildung</a></p>
           <p><a href="2.html" role="button">Prompt 2: Spannungsverhältnisse in der Lerngestaltung</a></p>
@@ -29,7 +33,6 @@
        <p><a href="meta.html" role="button">Verwendete Methoden und Ansätze (Meta-Reflexion)</a></p>
  <p>Eine ausführliche Darstellung zur verwendeten Konzeption und Durchführung findest du im Anschluss an die Fortbildung im <a href="https://ebildungslabor.de">eBildungslabor</a> </p>     
  
-    </section>
   </main>
 
   <footer class="container">
