Add additional links to barcamp schedule

--- a/barcamp.html
+++ b/barcamp.html
@@ -22,7 +22,6 @@
       <h2>Slot 1</h2>
   
   <ul>
-  <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-11">G2</a></li>
     <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-12">G2</a></li>
       <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-13">G3</a></li>
         <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-14">G4-6</a></li>
@@ -31,12 +30,13 @@
               <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-17">S7</a></li>
                 <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-18">Gallerie</a></li>
                  <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-19">Festsaal</a></li>
+      <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-11">Zusatz</a></li>
+
 </ul>
 
       <h2>Slot 2</h2>
      
        <ul>
-  <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-21">G2</a></li>
     <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-22">G2</a></li>
       <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-23">G3</a></li>
         <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-24">G4-6</a></li>
@@ -45,6 +45,8 @@
               <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-27">S7</a></li>
                 <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-28">Gallerie</a></li>
                  <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-29">Festsaal</a></li>
+           <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-21">G2</a></li>
+
 </ul>
    
 
