--- a/barcamp.html
+++ b/barcamp.html
@@ -28,7 +28,7 @@
           <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-15">S5</a></li>
             <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-16">S6</a></li>
               <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-17">S7</a></li>
-                <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-18">Gallerie</a></li>
+                <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-18">Galerie</a></li>
                  <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-19">Festsaal</a></li>
       <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-11">Zusatz</a></li>
 
@@ -43,7 +43,7 @@
           <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-25">S5</a></li>
             <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-26">S6</a></li>
               <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-27">S7</a></li>
-                <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-28">Gallerie</a></li>
+                <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-28">Galerie</a></li>
                  <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-29">Festsaal</a></li>
            <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-21">G2</a></li>
 
