Change link text from 'G2' to 'Zusatz'

--- a/barcamp.html
+++ b/barcamp.html
@@ -45,7 +45,7 @@
               <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-27">S7</a></li>
                 <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-28">Galerie</a></li>
                  <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-29">Festsaal</a></li>
-           <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-21">G2</a></li>
+           <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-21">Zusatz</a></li>
 
 </ul>
    
