--- a/barcamp.html
+++ b/barcamp.html
@@ -22,30 +22,30 @@
       <h2>Slot 1</h2>
   
   <ul>
-    <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-12">G2</a></li>
-      <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-13">G3</a></li>
+    <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-12">G2: Fragen zum Schul CMS</a></li>
+      <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-13">G3: Apps mit KI erstellen</a></li>
         <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-14">G4-6</a></li>
-          <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-15">S5</a></li>
-            <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-16">S6</a></li>
-              <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-17">S7</a></li>
+          <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-15">S5: Wie können wir die Angebite aller MPZ vernetzen und übergreifend nutzbar machen?</a></li>
+            <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-16">S6: Lernprodukte in Zeiten von KI - zurück zum Frontalunterricht?</a></li>
+              <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-17">S7: Ideen und Austaisch zur Prävention von Mediensucht</a></li>
                 <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-18">Galerie</a></li>
-                 <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-19">Festsaal</a></li>
-      <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-11">Zusatz</a></li>
+                 <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-19">Festsaal: Moodle zukunftsfähig machen</a></li>
+      <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-11">Zusatz (neben Festsaal): Bericht zu Digitalisierung von einer dänischen Berufsschule</a></li>
 
 </ul>
 
       <h2>Slot 2</h2>
      
        <ul>
-    <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-22">G2</a></li>
-      <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-23">G3</a></li>
+    <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-22">G2: Austausch zu bettermarks</a></li>
+      <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-23">G3: Erfahrungsaustaisch und Planung zu Medienscouts</a></li>
         <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-24">G4-6</a></li>
-          <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-25">S5</a></li>
-            <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-26">S6</a></li>
-              <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-27">S7</a></li>
+          <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-25">S5: Wie können wir die Sichtbarkeit der MPZ steigern?</a></li>
+            <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-26">S6: GOLEM: Selbstlernkurse für das BGY</a></li>
+              <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-27">S7: Freigabe von lokalen KI-Instanzen für Schulleitungen</a></li>
                 <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-28">Galerie</a></li>
-                 <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-29">Festsaal</a></li>
-           <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-21">Zusatz</a></li>
+                 <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-29">Festsaal: Netzwerkgruppe KI - Austausch und Planung</a></li>
+           <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-21">Zusatz (Nebenraum neben Festsaal): Austausch zum schulischen Einsatz von Drohnen</a></li>
 
 </ul>
    
