--- a/barcamp.html
+++ b/barcamp.html
@@ -38,7 +38,7 @@
      
        <ul>
     <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-22">G2: Austausch zu bettermarks</a></li>
-      <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-23">G3: Erfahrungsaustaisch und Planung zu Medienscouts</a></li>
+      <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-23">G3: Erfahrungsaustausch und Planung zu Medienscouts</a></li>
         <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-24">G4-6</a></li>
           <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-27">S5: Wie können wir die Sichtbarkeit der MPZ steigern?</a></li>
             <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-26">S6: GOLEM: Selbstlernkurse für das BGY</a></li>
