--- a/barcamp.html
+++ b/barcamp.html
@@ -25,7 +25,7 @@
     <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-12">G2: Fragen zum Schul CMS</a></li>
       <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-13">G3: Apps mit KI erstellen</a></li>
         <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-14">G4-6</a></li>
-          <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-15">S5: Wie können wir die Angebite aller MPZ vernetzen und übergreifend nutzbar machen?</a></li>
+          <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-15">S5: Wie können wir die Angebote aller MPZ vernetzen und übergreifend nutzbar machen?</a></li>
             <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-16">S6: Lernprodukte in Zeiten von KI - zurück zum Frontalunterricht?</a></li>
               <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-17">S7: Ideen und Austaisch zur Prävention von Mediensucht</a></li>
                 <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-18">Galerie</a></li>
