--- a/barcamp.html
+++ b/barcamp.html
@@ -27,7 +27,7 @@
         <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-14">G4-6</a></li>
           <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-15">S5: Wie können wir die Angebote aller MPZ vernetzen und übergreifend nutzbar machen?</a></li>
             <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-16">S6: Lernprodukte in Zeiten von KI - zurück zum Frontalunterricht?</a></li>
-              <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-17">S7: Ideen und Austaisch zur Prävention von Mediensucht</a></li>
+              <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-17">S7: Ideen und Austausch zur Prävention von Mediensucht</a></li>
                 <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-18">Galerie</a></li>
                  <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-19">Festsaal: Moodle zukunftsfähig machen</a></li>
       <li><a href="https://zumpad.zum.de/p/mpz-barcamp0701-11">Zusatz (neben Festsaal): Bericht zu Digitalisierung von einer dänischen Berufsschule</a></li>
